TM-344 ui problems: align text, expand button in FireFox, HTTP step bug in Headers

--- a/web/web-frontend/src/resources/css/testerum-theme-form.scss
+++ b/web/web-frontend/src/resources/css/testerum-theme-form.scss
@@ -10,6 +10,10 @@ select {
     width: auto;
 }
 
+.form-control {
+    align-self: baseline;
+}
+
 .form-value {
     margin-bottom: 0;
 }
@@ -39,7 +43,7 @@ input[type=checkbox]:focus {
     display: flex;
     min-height: 25px;
     flex-direction: row;
-    align-items: baseline;
+    align-items: center;
     margin: 8px 0;
 }
 
